[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
cached = "0.46.1"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
geo = "0.27.0"
indexmap = "2.1.0"
iterchunks = "0.5.0"
itermore = "0.6.0"
itertools = "0.12.0"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.2"
